--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
+    "androidx": "npm i jetifier && npx jetify",
+    "rm-git": "rm -rf node_modules/*/.git",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
@@ -27,7 +29,9 @@
     "apisauce": "^1.0.2",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
+    "jetifier": "^1.6.4",
     "lodash": "^4.17.11",
+    "native-base": "^2.13.7",
     "prop-types": "^15.6.1",
     "querystringify": "2.1.0",
     "ramda": "^0.26.1",
